datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

enum Role {
  ADMIN
  VIEWER
}

enum Status {
  OPEN
  IN_PROGRESS
  RESOLVED
  IGNORED
}

model User {
  id           String   @id @default(uuid()) @db.Uuid
  email        String   @unique
  passwordHash String   @map("password_hash")
  role         Role     @default(VIEWER)
  firstName    String?  @map("first_name")
  lastName     String?  @map("last_name")
  createdAt    DateTime @default(now()) @map("created_at")
  apiKeys      ApiKey[]

  @@map("user")
}

model Host {
  id         String      @id @default(uuid()) @db.Uuid
  hostname   String
  containers Container[]
  hostTechs      HostTech[]
  projectHosts   ProjectHost[]

  @@map("host")
}

model Project {
  id          String      @id @default(uuid()) @db.Uuid
  name        String      @unique
  description String?
  containers  Container[]
  vulnStates  VulnState[]
  projectTechs ProjectTech[]
  projectHosts ProjectHost[]

  @@map("project")
}

model Container {
  id            String          @id @default(uuid()) @db.Uuid
  projectId     String?         @map("project_id") @db.Uuid
  hostId        String?         @map("host_id") @db.Uuid
  containerName String          @map("container_name")
  
  project       Project?        @relation(fields: [projectId], references: [id])
  host          Host?           @relation(fields: [hostId], references: [id])
  techs         ContainerTech[]

  @@map("container")
}

model Technology {
  id         String   @id @default(uuid()) @db.Uuid
  name       String
  version    String
  ecosystem  String?
  
  // m:n self-reference for tech dependencies
  dependencies TechDependency[] @relation("TechHasDependency")
  requiredBy   TechDependency[] @relation("TechIsRequiredBy")
  
  containerTechs ContainerTech[]
  vulnStates     VulnState[]
  projectTechs   ProjectTech[]
  hostTechs      HostTech[]

  @@map("technology")
}

model TechDependency {
  id             String @id @default(uuid()) @db.Uuid
  techId         String @map("tech_id") @db.Uuid
  requiresTechId String @map("requires_tech_id") @db.Uuid
  
  technology     Technology @relation("TechHasDependency", fields: [techId], references: [id])
  requiresTech   Technology @relation("TechIsRequiredBy", fields: [requiresTechId], references: [id])

  @@unique([techId, requiresTechId])
  @@map("tech_dependency")
}

model ContainerTech {
  id           String @id @default(uuid()) @db.Uuid
  containerId  String @map("container_id") @db.Uuid
  technologyId String @map("technology_id") @db.Uuid
  source       String

  container    Container   @relation(fields: [containerId], references: [id])
  technology   Technology  @relation(fields: [technologyId], references: [id])

  @@map("container_tech")
}

model Vulnerability {
  id              String @id @map("id")
  vulnerableRange String @map("vulnerable_range")
  baseSeverity    String @map("base_severity")
  
  vulnStates      VulnState[]

  @@map("vulnerability")
}

model VulnState {
  id              String   @id @default(uuid()) @db.Uuid
  technologyId    String?  @map("technology_id") @db.Uuid
  projectId       String?  @map("project_id") @db.Uuid
  vulnerabilityId String   @map("vulnerability_id")
  status          Status   @default(OPEN)
  
  technology      Technology?    @relation(fields: [technologyId], references: [id])
  project         Project?       @relation(fields: [projectId], references: [id])
  vulnerability   Vulnerability @relation(fields: [vulnerabilityId], references: [id])
  
  createdAt       DateTime      @default(now()) @map("created_at")
  resolvedAt      DateTime?     @map("resolved_at")
  aiInsight       AiInsight?

  @@map("vuln_state")
}

model AiInsight {
  id               String @id @default(uuid()) @db.Uuid
  vulnStateId      String @unique @map("vuln_state_id") @db.Uuid
  adjustedSeverity String @map("adjusted_severity")
  
  vulnState        VulnState @relation(fields: [vulnStateId], references: [id])

  @@map("ai_insight")
}

model ApiKey {
  id         String    @id @default(uuid()) @db.Uuid
  keyHash    String    @unique @map("key_hash")
  name       String
  createdAt  DateTime  @default(now()) @map("created_at")
  lastUsedAt DateTime? @map("last_used_at")
  expiresAt  DateTime? @map("expires_at")
  userId     String    @map("user_id") @db.Uuid

  user       User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("api_key")
}

model ProjectTech {
  id           String   @id @default(uuid()) @db.Uuid
  projectId    String   @map("project_id") @db.Uuid
  technologyId String   @map("technology_id") @db.Uuid
  source       String   @default("api")

  project      Project    @relation(fields: [projectId], references: [id], onDelete: Cascade)
  technology   Technology @relation(fields: [technologyId], references: [id], onDelete: Cascade)

  @@unique([projectId, technologyId])
  @@map("project_tech")
}

model HostTech {
  id           String   @id @default(uuid()) @db.Uuid
  hostId       String   @map("host_id") @db.Uuid
  technologyId String   @map("technology_id") @db.Uuid
  source       String   @default("api")

  host         Host       @relation(fields: [hostId], references: [id], onDelete: Cascade)
  technology   Technology @relation(fields: [technologyId], references: [id], onDelete: Cascade)

  @@unique([hostId, technologyId])
  @@map("host_tech")
}

model ProjectHost {
  id        String   @id @default(uuid()) @db.Uuid
  projectId String   @map("project_id") @db.Uuid
  hostId    String   @map("host_id") @db.Uuid
  source    String   @default("api")

  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  host      Host     @relation(fields: [hostId], references: [id], onDelete: Cascade)

  @@unique([projectId, hostId])
  @@map("project_host")
}

model SecurityScanSource {
  id         String    @id @default(uuid()) @db.Uuid
  name       String
  url        String
  type       String
  isActive   Boolean   @default(true) @map("is_active")
  lastSyncAt DateTime? @map("last_sync_at")
  createdAt  DateTime  @default(now()) @map("created_at")
  updatedAt  DateTime  @updatedAt @map("updated_at")

  @@map("security_scan_source")
}
